--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-checkbox-x": "*",
-        "kartik-v/yii2-widget-fileinput": "@dev",
-        "kartik-v/yii2-detail-view": "*"
+        "kartik-v/yii2-widget-fileinput": "*",
+        "kartik-v/yii2-detail-view": "*",
+        "kartik-v/yii2-widget-depdrop": "*",
+        "kartik-v/yii2-widget-select2": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
